# capacity-forecaster

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
capacity_forecaster/: __init__.py  core.py
tests/: test_forecaster.py
