[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capacity-forecaster"
version = "0.1.3"
description = "SARIMAX-based capacity planning forecasting engine"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "statsmodels>=0.14",
]

[project.urls]
Homepage = "https://github.com/lairizzle/capacity-forecaster"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
